--- a/client/index.css
+++ b/client/index.css
@@ -6,8 +6,8 @@ body {
     background-size: cover;
   }
 
-  div.bg-transparent {
+  div.bg-trans {
     --bs-bg-opacity: .65;
-    border: 2px solid balck;
+    /* border: 2px solid black; */
     border-radius: 30px;
   }
