--- a/client/index.css
+++ b/client/index.css
@@ -1,13 +1,13 @@
 body {
-    height: 100%;
-    width: 100%;
-    background-image: url(./assets/bg.bmp);
-    background-repeat: repeat-y;
-    background-size: cover;
+  height: 100%;
+  width: 100%;
+  background-image: url(./assets/bg.bmp);
+  background-repeat: repeat-y;
+  background-size: cover;
 }
 
 div.bg-trans {
-  --bs-bg-opacity: .70;
+  --bs-bg-opacity: 0.7;
   /* border: 2px solid black; */
   border-radius: 30px;
 }
