--- a/client/index.css
+++ b/client/index.css
@@ -12,6 +12,12 @@ div.bg-trans {
   border-radius: 30px;
 }
 
+div.bg-messages {
+  --bs-bg-opacity: 0.7;
+  /* border: 2px solid black; */
+  border-radius: 30px 0px 0px 30px;
+}
+
 .dot {
   height: 45px;
   width: 45px;
